# NodeImageProcessor

./: CMakeLists.txt  README.md
src/: NodeGraph.cpp  NodeGraph.hpp  main.cpp
src/nodes/: BlurNode.cpp  BlurNode.hpp  BrightnessNode.cpp  BrightnessNode.hpp  ContrastNode.cpp  ContrastNode.hpp  EdgeDetectionNode.cpp  EdgeDetectionNode.hpp  GrayscaleNode.cpp  GrayscaleNode.hpp  InputNode.cpp  InputNode.hpp  NodeBase.cpp  NodeBase.hpp  OutputNode.cpp  OutputNode.hpp  SaturationNode.cpp  SaturationNode.hpp  SharpenNode.cpp  SharpenNode.hpp  ThresholdNode.cpp  ThresholdNode.hpp
